loan-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loan-service
  template:
    metadata:
      labels:
        app: loan-service
    spec:
      containers:
        - name: loan-service
          image: sidra814/loan-service
          ports:
            - containerPort: 3001
