loan-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loan-service
spec:
  selector:
    app: loan-service
  ports:
    - port: 3001
      targetPort: 3001
