loan-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-ingress
spec:
  rules:
    - host: book.local
      http:
        paths:
          - path: /loans
            pathType: Prefix
            backend:
              service:
                name: loan-service
                port:
                  number: 3001
