loan-service/virtualservice-loan.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: loan-service
spec:
  hosts:
    - "*"
  gateways:
    - book-ingress
  http:
    - match:
        - uri:
            prefix: /loans
      route:
        - destination:
            host: loan-service
            port:
              number: 3001
